updated email address to personal address

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,6 +1,6 @@
 [user]
   name = Pedro Liska
-  email = pedro.liska@extendhealth.com
+  email = pedroliska@github.com
 [push]
   default = simple
 [color "status"]
