cleaning up and adding ds command

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,6 +1,6 @@
 [user]
   name = Pedro Liska
-  email = pedroliska@github.com
+  email = pedroliska@gmail.com
 [push]
   default = simple
 [color "status"]
